--- a/_includes/sidebar-qrcode.html
+++ b/_includes/sidebar-qrcode.html
@@ -1,4 +1,4 @@
-{% if site.url contains 'wvalianty.github.io' %}
+{% if site.url contains '等我有公众号了，就写上自己的域名' %}
 <h3>欢迎关注我的微信公众号</h3>
 <img style="border:1px solid #dddddd;height:192px;width:192px" src="{{ site.url }}/assets/images/qrcode.jpg" alt="闷骚的程序员" />
 {% endif %}
