--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -40,9 +40,9 @@
       {% if site.disqus and site.disqus.username %}
         {% assign load_disqus = true %}
         <!-- Disqus Protection, see https://github.com/mzlogin/mzlogin.github.io/issues/2 -->
-        {% if site.disqus.username == 'wvalianty' %}
+        {% if site.disqus.username == 'mzlogin' %}
           {% assign load_disqus = false %}
-          {% if site.url contains 'wyong.cn' %}
+          {% if site.url contains 'mazhuang.org' %}
             {% assign load_disqus = true %}
           {% endif %}
         {% endif %}
