add comment button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,5 +45,6 @@ layout: default
     {% include sidebar-post-nav.html %}
   </div>
 </div>
+<a href="https://cors-anywhere.herokuapp.com/corsdemo"><strong>评论请点击这里</strong></a>
 </section>
 <!-- /section.content -->
