--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!-- add some music start -->
-<!-- <audio autoplay="autoplay" id="vd"><source src="https://cdn.oss.link/markdown/music_see_you_again.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio>
+<audio autoplay="autoplay" id="vd"><source src="http://wyong.cn/music/jiaRuAiYouTianYi.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio>
 <script>
   function toggleSound() {
    var music = document.getElementById("vd");//获取ID  
@@ -14,7 +14,7 @@ layout: default
    }
   }
   var timer = setInterval("toggleSound()", 1);
-</script> -->
+</script> 
 <!-- add some music end -->
 
 <section class="collection-head small geopattern" data-pattern-id="{{ page.title | truncate: 15}}">
