--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!-- add some music start -->
-<audio autoplay="autoplay" id="vd"><source src="/music/jiaRuAiYouTianYi.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio>
+<audio autoplay="autoplay" id="vd"><source src="https://od.lk/s/NjZfMzM2NDEzMzhf/jiaRuAiYouTianYi.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio>
 <script>
   function toggleSound() {
    var music = document.getElementById("vd");//获取ID  
