fix music play error

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: default
    var music = document.getElementById("vd");//获取ID  
    if (music.paused) { //判读是否播放  
     music.paused = false;
-    music.play(); //没有就播放 
+    music.play().then(_ => {console.log("music play successful!")}).catch(error => {return}); //没有就播放 
    } else {
     clearInterval(timer)
    }
