--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- add some music start -->
+<!-- add some music start 假如爱有天意-->
 <audio autoplay="autoplay" id="vd"><source src="https://www.ytmp3.cn/down/73428.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio>
 <script>
   function toggleSound() {
